--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Form</title>
 </head>
-<body>
+<body style="background-color: hsl(217, 100%, 97%);">
     <div id="root"></div>
-<script src="../src/index.js" ></script>
+    <script src="../src/index.js" ></script>
 </body>
 </html>
