--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0bc853992b.js" crossorigin="anonymous"></script>
     <title>Form</title>
 </head>
-<body style="background-color: hsl(217, 100%, 97%);">
+<body style="background-color: hsl(217, 100%, 97%); font-family: Ubuntu, sans-serif;">
     <div id="root"></div>
     <script src="../src/index.js" ></script>
 </body>
